--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,13 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "yugioh-timeless"
-version = "0.0.1"
+version = "0.1.0-alpha"
 dependencies = [
-    "colorama == 0.4.6",
-    "numpy == 1.24.2",
-    "tabulate == 0.9.0",
+    "colorama >= 0.4.6",
+    "numpy >= 1.24.2",
+    "tabulate >= 0.9.0",
 ]
-requires-python = ">= 3.11"
+requires-python = ">= 3.13"
 
 [project.scripts]
 timeless = "yugioh_timeless:run_yugioh_timeless"
