--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "yugioh-timeless"
-version = "0.1.0-alpha"
+version = "0.1.0-beta"
 dependencies = [
     "tabulate >= 0.9.0",
 ]
