--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "yugioh-timeless"
 version = "0.1.0-beta"
+license = "MIT"
 dependencies = [
     "tabulate >= 0.9.0",
 ]
