--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,11 @@ dependencies = [
 requires-python = ">= 3.13"
 dynamic = ["version"]
 
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.3.5",
+]
+
 [project.urls]
 Homepage = "https://yugioh-timeless.github.io"
 GitHub = "https://github.com/nacezavrtanik/yugioh-timeless"
