__main__.py added, `timeless` entry point rerouted to it
Also removed run_yugioh_timless from the package namespace.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,8 @@ GitHub = "https://github.com/nacezavrtanik/yugioh-timeless"
 YouTube = "https://www.youtube.com/@Yu-Gi-OhTIMELESS"
 
 [project.scripts]
-timeless = "timeless:run_yugioh_timeless"
+timeless = "timeless.__main__:run_cli"
+timeless-old = "timeless.timeless:run_yugioh_timeless"
 
 [tool.setuptools.dynamic]
 version = {attr = "timeless.__version__"}
